# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "sanctum_solver"
version = "0.2.0"
authors = ["AllMyJokesArgon"]
description = "Find the most efficient build for a Sanctum map."

categories = ["algorithms", "command-line-utilities", "simulation"]
edition = "2018"
keywords = ["coffee stain studios", "fps", "longest", "maze", "path", "rts", "sanctum"]
license = "GPL3"
readme = "./README.md"

[dependencies]
# Arguments
structopt = "0.3"

# Errors
snafu = "0.6"

# Parallel
rayon = "1"

# Serialization
serde = {features=["derive"], version="1"}
serde_json = "1"
