# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "sanctum-solver"
edition = "2021"
version = "0.4.0"
authors = ["Iron-E"]
description = "Find the most efficient build for a Sanctum map."

categories = ["algorithms", "command-line-utilities", "simulation"]
keywords = ["coffee stain studios", "fps", "longest", "maze", "path", "rts", "sanctum"]
license = "GPL3"
readme = "./README.md"
repository = "https://www.github.com/Iron-E/sanctum-solver"

[dependencies]
# Arguments
structopt = "0.3"

# Errors
snafu = "0.6"

# Parallel
rayon = "1"

# Serialization
serde = {features = ["derive"], version = "1"}
serde_json = "1"
